--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,7 +45,7 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.superfences
   - pymdownx.mark
-  - attr_list2
+  - attr_list
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
