--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ markdown_extensions:
   - pymdownx.mark
   - attr_list
   - pymdownx.superfences
+  - md_in_html
   - pymdownx.tabbed:
       alternate_style: true
 
